<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnaccepter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accepter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAnnuler"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btneffacer" />

    <Button
        android:id="@+id/btneffacer"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:text="@string/effacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnaccepter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnaccepter" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="235dp"
        android:layout_height="270dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toTopOf="@+id/btnaccepter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/android" />

    <EditText
        android:id="@+id/idNom"
        android:layout_width="323dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/idAdress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idTelephone"
        android:layout_width="314dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/idCourriel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAdress" />

    <EditText
        android:id="@+id/idCourriel"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/courriel"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnaccepter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTelephone" />

    <EditText
        android:id="@+id/idAdress"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/adresse"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/idTelephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idNom" />

</androidx.constraintlayout.widget.ConstraintLayout>